# gifbadge

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  FreeRTOSConfig.h  README.md  partitions.csv  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.1_28  sdkconfig.defaults.2_1  sdkconfig.defaults.esp32s3  sdkconfig.prod_1_28
components/fileutil/: CMakeLists.txt  directory.c  dirname.c
components/fileutil/include/: directory.h  dirname.h
components/font_render/: CMakeLists.txt  font_render.cpp
components/gifbadge_hal_esp32/: CMakeLists.txt  hal_usb.cpp  hw_init.cpp  i2c.cpp  ota.cpp
components/gifbadge_hal_esp32/boards/: b2_1_v0_2.cpp  b2_1_v0_2_v0_4_common.cpp  b2_1_v0_4.cpp  b2_1_v0_5.cpp  board_1_28_v0_1.cpp  board_1_28_v0_3.cpp  board_2_1_v0_2.cpp  board_2_1_v0_4.cpp  board_esp32s3.cpp  board_esp32s3_2_1_0_2_0_4_common.cpp  board_esp32s3_sdmmc.cpp  board_v0.cpp
components/gifbadge_hal_esp32/boards/full/: v0_2.cpp  v0_2_v0_4_common.cpp  v0_4.cpp  v0_5.cpp  v0_6.cpp
components/gifbadge_hal_esp32/boards/mini/: v0.cpp  v0_1.cpp  v0_3.cpp
components/gifbadge_hal_esp32/drivers/: PmicNpm1300.cpp  VbusGpio.cpp  backlight_ledc.cpp  battery_analog.cpp  battery_max17048.cpp  config_nvs.cpp  display_gc9a01.cpp  display_st7701s.cpp  esp_io_expander_gpio.cpp  keys_esp_io_expander.cpp  keys_generic.cpp  keys_gpio.cpp  mfd_npm1300.cpp  touch_ft5x06.cpp
components/gifbadge_hal_esp32/include/: hal_usb.h  i2c.h
components/gifbadge_hal_esp32/include/boards/: b1_28_v0_1.h  b1_28_v0_3.h  b2_1_v0_2.h  b2_1_v0_2_v0_4_common.h  b2_1_v0_4.h  b2_1_v0_5.h  board_1_28_v0_1.h  board_2_1_v0_2.h  board_2_1_v0_4.h  board_esp32s3_2_1_0_2_0_4_common.h  board_esp32s3_sdmmc.h  board_v0.h  boards.h  boards_esp32s3.h  esp32s3_sdmmc.h  v0.h
components/gifbadge_hal_esp32/include/drivers/: PmicNpm1300.h  backlight_ledc.h  battery_analog.h  battery_max17048.h  display_gc9a01.h  display_st7701s.h  esp_io_expander_gpio.h  keys_esp_io_expander.h  keys_generic.h  mfd_npm1300.h  touch_ft5x06.h  vbus_gpio.h
components/gifbadge_hal_esp32/public_include/: esp_ota.h
components/image/: CMakeLists.txt  gif.cpp  jpeg.cpp  png.cpp
components/image/EmbeddedImage/: CMakeLists.txt  bitbank2.cpp  gif.cpp  image.cpp  jpeg.cpp  png.cpp
components/image/EmbeddedImage/include/: gif.h  image.h  jpeg.h  png.h
components/image/EmbeddedImage/tjpgd/: tjpgdcnf.h
components/image/include/: image.h  jpeg.h
components/image/tjpgd/: tjpgdcnf.h
idf-components/image/: CMakeLists.txt
idf-components/image/EmbeddedImage/: bitbank2.cpp  bmp.cpp  gif.cpp  image.cpp  jpeg.cpp  png.cpp
idf-components/image/EmbeddedImage/include/: bmp.h  gif.h  image.h  jpeg.h  png.h
lib/embeddedimage/test/: CMakeLists.txt  config.h.in  main.cpp  test_jpeg.cpp  test_jpeg.h  test_png.cpp  test_png.h  test_resize.cpp  test_resize.h
lib/embeddedimage/test/testdata/: 240x240on480x480.h  437x437on480x480.h  480x480.h  480x480jpeg_resized_240x240.h  480x480png_resized_240x240.h  960x480_resized_480x360.h
lib/filebuffer/: CMakeLists.txt  filebuffer.cpp
lib/filebuffer/include/: filebuffer.h
lib/font_render/: CMakeLists.txt  font_render.cpp
lib/font_render/include/: font_render.h  fonts.h
lib/font_render/include/fonts/: DejaVuSerif16.h  DejaVuSerif32.h
lib/font_render/test/: CMakeLists.txt  test_font.c
lib/gifbadge_hal_linux/: CMakeLists.txt  hw_init.cpp  portable_time.c
lib/gifbadge_hal_linux/boards/: board_linux.cpp
lib/gifbadge_hal_linux/drivers/: backlight_dummy.cpp  battery_dummy.cpp  config_mem.cpp  console.c  display_sdl.cpp  key_sdl.cpp  touch_sdl.cpp
lib/gifbadge_hal_linux/include/boards/: board_linux.h
lib/gifbadge_hal_linux/include/drivers/: backlight_dummy.h  battery_dummy.h  config_mem.h
lib/gifbadge_hal_linux/public_include/: log.h  portable_time.h
lib/gifbadge_hal_linux/public_include/drivers/: display_sdl.h  key_sdl.h  touch_sdl.h
lib/simplebmp/: CMakeLists.txt  simplebmp.cpp
lib/simplebmp/include/: simplebmp.h
main/: CMakeLists.txt  Kconfig  battery.cpp  config.cpp  display.cpp  esp_efuse_custom_table.c  esp_efuse_custom_table.csv  file_util.cpp  hw_init.cpp  i2c.cpp  idf_component.yml  input.cpp  keys.cpp  main.cpp  material_icons.c  material_icons_56.c  menu.cpp  nvs_2_1.csv  nvs_default.csv  ota.cpp  portable_time.c  touch.cpp  usb.cpp
main/hal/: hal_usb.cpp  i2c.cpp  keys.cpp
main/hal/boards/: board_1_28_v0_1.cpp  board_2_1_v0_1.cpp  board_2_1_v0_2.cpp  board_2_1_v0_4.cpp  board_data.c  board_v0.cpp
main/hal/drivers/: backlight_ledc.cpp  battery_analog.cpp  battery_max17048.cpp  display_gc9a01.cpp  display_st7701s.cpp  keys_esp_io_expander.cpp  keys_gpio.cpp  touch_ft5x06.cpp
main/hal/esp32/: esp_efuse_custom_table.c  hal_usb.cpp  i2c.cpp
main/hal/esp32/boards/: board_1_28_v0_1.cpp  (+4 more)
main/include/: battery.h  config.h  display.h  esp_efuse_custom_table.h  file_util.h  ft5x06.h  grad.h  hw_init.h  i2c.h  input.h  keys.h  log.h  lv_conf.h  lv_conf_linux.h  menu.h  ota.h  portable_time.h  touch.h  usb.h  usb_image.h
main/include/hal/: backlight.h  battery.h  board.h  config.h  display.h  hal_usb.h  i2c.h  keys.h  storage.h  touch.h
main/include/images/: image_too_big.h  low_batt.h  low_batt_png.h  no_image.h  usb_png.h
main/include/ui/: device_group.h  device_info.h  file_options.h  file_select.h  help.h  lvgl.h  main_menu.h  menu.h  storage.h  style.h  usb_connected.h
main/ui/: device_group.c  device_info.cpp  file_options.cpp  file_select.cpp  help.cpp  lvgl.cpp  main_menu.cpp  menu.cpp  storage.cpp  style.c  usb_connected.cpp
main/ui/fonts/: battery_symbols_14.c  material_icons.c  material_icons_56.c  material_icons_special.c
non-idf-components/fileutil/: CMakeLists.txt  directory.c  dirname.c  file.cpp  path.c
non-idf-components/fileutil/include/: file.h
non-idf-components/fileutil/test/: CMakeLists.txt
non-idf-components/font_render/: CMakeLists.txt
non-idf-components/font_render/include/: font_render.h
non-idf-components/font_render/test/: CMakeLists.txt
non-idf-components/gifbadge_hal/: CMakeLists.txt  keys.cpp
(+401 files in other folders)
