file(GLOB mcufont_src mcufont/decoder/*.c)
if (ESP_PLATFORM)
    idf_component_register(SRCS "font_render.cpp" ${mcufont_src}
            INCLUDE_DIRS "mcufont/decoder" "include")
else ()
    cmake_minimum_required(VERSION 3.1...3.29)
    project(FontRender VERSION 1.0 LANGUAGES CXX)
    add_library(FontRender "font_render.cpp" ${mcufont_src} "include/font_render.h")
    target_include_directories(FontRender PUBLIC "mcufont/decoder" "include")
endif ()
